Using Apache commons-codec.